add htop package

--- a/base.yml
+++ b/base.yml
@@ -28,6 +28,7 @@
       - firefox
       - iptables-services
       - fail2ban-server
+      - htop
 
   - name: Add aardes user to the sudoers
     copy:
