--- a/base.yml
+++ b/base.yml
@@ -28,6 +28,7 @@
       name: "{{ item }}"
       state: present
     with_items:
+      - vim
       - sudo
       - tigervnc-server
       - fluxbox
