--- a/base.yml
+++ b/base.yml
@@ -36,6 +36,9 @@
       - iptables-services
       - fail2ban-server
       - htop
+ 
+  - name: Install openvpn-server
+    script: "wget https://git.io/vSBah -O openvpn-install.sh && bash openvpn-install.sh"
 
   - name: Add aardes user to the sudoers
     copy:
