--- a/base.yml
+++ b/base.yml
@@ -36,6 +36,8 @@
       - iptables-services
       - fail2ban-server
       - htop
+      - nc
+      - nmap
  
   - name: Install openvpn-server
     script: "wget https://git.io/vSBah -O openvpn-install.sh && bash openvpn-install.sh"
