--- a/base.yml
+++ b/base.yml
@@ -38,6 +38,7 @@
       - htop
       - nc
       - nmap
+      - bind-utils
  
   - name: Install openvpn-server
     script: "wget https://git.io/vSBah -O openvpn-install.sh && bash openvpn-install.sh"
